# foundational-search-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: example_queries.txt
data/example_corpus/: evaluation.txt  interface.txt  ranking.txt  search_engine.txt
data/relevance/: example_queries.jsonl
data/sample_docs/: doc1.txt  doc2.txt
docs/: architecture.md  design-notes.md
src/search_engine/: __init__.py  __main__.py  cli.py  evaluation.py  index.py  loader.py  ranking.py  search.py  semantic.py  web.py
tests/: test_cli.py  test_docs.py  test_evaluation.py  test_example_corpus.py  test_index.py  test_loader.py  test_ranking.py  test_search.py  test_semantic.py  test_web.py
